# class-projects

./: .gitignore  README.md  dataset.py  model_eval.py  requirements.txt  v2_train.py  v3_train.py  v4_train.py
EntityLinkNLP/: README.md  v3_train.py  v4_train.py
EntityLinkNLP/datasets/: final_dataset.py
EntityLinkNLP/model/: bert_model.py  v2_bert_model.py  v3_model.py
data-mining/: .gitignore  README.md  data_distribution.ipynb  eval.py  main.py  pyproject.toml  requirements.txt  test.ipynb
data-mining/config/: config.yaml
data-mining/data/: __init__.py  data_module.py  dataset.py  process.ipynb
data-mining/model/: __init__.py  linear.py  mlp.py
datasets/: final_dataset.py
model/: v2_bert_model.py  v3_model.py  v4_model.py
scripts/: dev.sh
