[project]
name = "data-mining-2024Srping-Project"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{ name = "Yuquan Xie", email = "xieyuquanxx@163.com" }]

[tool.black]
line-length = 110


[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    "tests/data",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true
